--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,6 @@
     * {
       box-sizing: border-box;
     }
-
   </style>
 
 </head>
@@ -102,6 +101,7 @@
       init: function () {
         this.on("success", function (file, response) {
           console.log(response);
+          window.open(response, '_blank').focus();           
         })
       }
     });
