--- a/public/index.html
+++ b/public/index.html
@@ -32,56 +32,9 @@
       margin-left: auto;
       margin-right: auto;
     }
-
-    .code-sign-block {
-      display: inline-block;
-      margin: 24px 24px 24px 24px;
-      position: relative;
-    }
-
-    .code-sign-block div {
-      display: inline-block;
-      line-height: 40px;
-    }
-
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-
-    .row {
-      display: flex;
-      max-width: 500px;
-      position: relative;
-      margin: auto;
-    }
-
-    .column2 {
-      overflow: hidden;
-      width: auto;
-      padding: 10px;
-    }
-
-    .column1 {
-      float: left;
-      width: 75px;
-      padding: 10px;
-    }
-
+    
     * {
       box-sizing: border-box;
-    }
-
-    .button {
-      background-color: rgb(0, 135, 247);
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
     }
 
     .submit-button {
@@ -105,12 +58,20 @@
     .size-input {
       width: 80px;
     }
+
+    a {font-size: 15px}
+
+
   </style>
 
 </head>
 
 <body>
   <h1>Upload flags</h1>
+  <div class="submit-button">
+  <a href="https://github.com/jsramraj/flag-sprite-creator/blob/master/README.md">Read the documention here to know how to use this tool</a>
+</div>
+  <br>
   <div>
     <form ref='uploadForm' id='uploadForm' action='upload' method='post' class="dropzone" encType="multipart/form-data">
       <div class="dz-message needsclick">
